# dcbot-mc-monitor

./: bot.py  pyproject.toml
cogs/: minecraft.py  preserve.py
database/: __init__.py  schema.sql
mc/: instance.py
